fixing invalidate api
