# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/api/v1/session/user/{user_id}/invalidate": {
+        "/api/v1/session/user/invalidate": {
             "delete": {
                 "description": "get authtoken by",
                 "consumes": [
@@ -40,7 +40,7 @@
                 }
             }
         },
-        "/api/v1/session/user/{user_id}/validate": {
+        "/api/v1/session/user/validate": {
             "get": {
                 "description": "get authtoken by",
                 "consumes": [
